<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="isTopicChecked"
      type="Boolean" />

    <variable
      name="viewModel"
      type="org.oppia.android.app.devoptions.marktopicscompleted.TopicSummaryViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp">

    <CheckBox
      android:id="@+id/mark_topics_completed_topic_check_box"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:button="@drawable/selector_checkbox"
      android:checked="@{isTopicChecked}"
      android:drawableStart="@android:color/transparent"
      android:drawablePadding="20dp"
      android:fontFamily="sans-serif"
      android:gravity="start|top"
      android:paddingBottom="26dp"
      android:text="@{viewModel.topic.name}"
      android:textAlignment="viewStart"
      android:textColor="@color/oppiaPrimaryText"
      android:textSize="16sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
